@@ -9,7 +9,7 @@ loader_version=0.14.23
 
 # Mod Properties
 mod_id=tolaserblade
-mod_version=3.1.0
+mod_version=3.1.1-wip
 maven_group=com.github.iunius118.tolaserblade
 archives_base_name=ToLaserBlade-fabric
 
