@@ -3,6 +3,8 @@
 [Source](https://github.com/Iunius118/ToLaserBlade-Fabric).
 
 ## [Unreleased]
+### Fixed
+- Loading and rendering of laser blade models.
 
 ## [3.1.0]
 ### Added
